Quorum/Library/Tests/Inheritance/Pass/CastA.quorum
class CastA 
    action Test
        
    end
end