Quorum/Library/Tests/Inheritance/Fail/WrongBlueprint.quorum
class WrongBlueprint is WrongBlueprintParent
    blueprint action Test
end